--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -6,7 +6,12 @@
   height: 60px;
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: #1976d2;
   color: white;
   font-weight: 600;
+}
+
+.header {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
