--- a/src/app/language-card/language-card.component.html
+++ b/src/app/language-card/language-card.component.html
@@ -1,1 +1,20 @@
-<h1>language-card works!</h1>
+<div>
+  <h1 class="title">Pick a Language</h1>
+  <div class="card-container">
+    <mat-card>
+      <mat-card-title>Urdu</mat-card-title>
+      <mat-card-content>ہیلو دنیا</mat-card-content>
+      <button class="available">Click here to get started!</button>
+    </mat-card>
+    <mat-card>
+      <mat-card-title>French</mat-card-title>
+      <mat-card-content>Bonjour le monde</mat-card-content>
+      <button class="not-available">Currently not available</button>
+    </mat-card>
+    <mat-card>
+      <mat-card-title>Spanish</mat-card-title>
+      <mat-card-content>Hola Mundo</mat-card-content>
+      <button class="not-available">Currently not available</button>
+    </mat-card>
+  </div>
+</div>
