--- a/src/app/language-card/language-card.component.css
+++ b/src/app/language-card/language-card.component.css
@@ -8,6 +8,19 @@
   justify-content: space-evenly;
 }
 
+button {
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  outline: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: transparent;
+  transition: ease 0.4s;
+}
+
 .available {
   background-color: rgb(65, 156, 65);
 }
