--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,6 @@
 <div class="toolbar">
+  <div class="button-holder">
+    <button routerLink="/home">Home</button>
+  </div>
   <h1 class="header">{{ pageTitle }}</h1>
 </div>
