--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,8 +1,14 @@
 .toolbar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: #1976d2;
   color: white;
   font-weight: 600;
+}
+
+.button-holder {
+  width: 40%;
+  display: flex;
+  justify-content: center;
 }
