--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -1,1 +1,63 @@
-<p>urdu works!</p>
+<h1 class="title">Pick a Card</h1>
+<div class="card-container">
+  <div class="row">
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+  </div>
+  <div class="row">
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+    <div>
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>Content</mat-card-content>
+        <button>Open</button>
+      </mat-card>
+    </div>
+  </div>
+</div>
