--- a/src/app/urdu/urdu.component.css
+++ b/src/app/urdu/urdu.component.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100px;
+  max-width: 30%;
 }
 
 .row {
@@ -12,4 +13,21 @@
 
 mat-card {
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(156, 247, 156);
+}
+
+button {
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  outline: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: transparent !important;
+  transition: ease 0.5s;
 }
