--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+button {
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  outline: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: transparent !important;
+  transition: ease 0.5s;
+}
