added modal to page

--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -5,8 +5,10 @@
       <mat-card>
         <mat-card-title>{{ category.category }}</mat-card-title>
         <mat-card-content>{{ category.description }}</mat-card-content>
-        <button>{{ category.button }}</button>
+        <button (click)="openModal()">{{ category.button }}</button>
       </mat-card>
     </div>
   </div>
 </div>
+
+<app-modal #modal></app-modal>
