added some extra elements

--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,6 +1,9 @@
 <div #myModal class="container">
   <div class="content">
-    <p>Some content here...</p>
+    <p class="word"></p>
+    <p class="translation"></p>
+  </div>
+  <div class="button-container">
     <button (click)="close()">Close</button>
   </div>
 </div>
