--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -5,10 +5,20 @@
       <mat-card>
         <mat-card-title>{{ category.category }}</mat-card-title>
         <mat-card-content>{{ category.description }}</mat-card-content>
-        <button (click)="openModal()">{{ category.button }}</button>
+        <button *ngIf="i == 0" (click)="openNounModal()">
+          Click Here to get started!
+        </button>
+        <button *ngIf="i == 1" (click)="openVerbModal()">
+          Click Here to get started!
+        </button>
+        <button *ngIf="i == 2" (click)="openPhraseModal()">
+          Click Here to get started!
+        </button>
       </mat-card>
     </div>
   </div>
 </div>
 
-<app-modal #modal></app-modal>
+<app-modal #nounModal></app-modal>
+<app-modal #verbModal></app-modal>
+<app-modal #phraseModal></app-modal>
