changed the button descriptions

--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -6,13 +6,13 @@
         <mat-card-title>{{ category.category }}</mat-card-title>
         <mat-card-content>{{ category.description }}</mat-card-content>
         <button *ngIf="i == 0" (click)="openNounModal()">
-          Click Here to get started!
+          Click here to learn some Animal names!
         </button>
         <button *ngIf="i == 1" (click)="openVerbModal()">
-          Click Here to get started!
+          Click here to learn different verbs!
         </button>
         <button *ngIf="i == 2" (click)="openPhraseModal()">
-          Click Here to get started!
+          Click here to learn phrases you will commonly use!
         </button>
       </mat-card>
     </div>
