added padding to button + position absolute to container

--- a/src/app/shared/modal/modal.component.css
+++ b/src/app/shared/modal/modal.component.css
@@ -1,6 +1,6 @@
 .container {
   display: none;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   padding-top: 100px;
   left: 0;
@@ -22,4 +22,5 @@
 .button-container {
   display: flex;
   justify-content: center;
+  padding: 20px 0px;
 }
