edited urduWords to urduNouns

--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div #nounModal class="container">
-  <div class="content" *ngFor="let urduWord of urduWords">
+  <div class="content" *ngFor="let urduNoun of urduNouns">
     <p class="word">Word: {{ urduWord.word }}</p>
     <p class="translation">Translation: {{ urduWord.translation }}</p>
   </div>
