brought over the html from urdu component

--- a/src/app/french/french.component.html
+++ b/src/app/french/french.component.html
@@ -1,1 +1,24 @@
-<p>french works!</p>
+<h1 class="title">Pick a Card</h1>
+<div class="card-container">
+  <div class="row">
+    <div *ngFor="let category of categories; let i = index">
+      <mat-card>
+        <mat-card-title>{{ category.category }}</mat-card-title>
+        <mat-card-content>{{ category.description }}</mat-card-content>
+        <button *ngIf="i == 0" (click)="openNounModal()">
+          Click here to learn some Animal names!
+        </button>
+        <button *ngIf="i == 1" (click)="openVerbModal()">
+          Click here to learn different verbs!
+        </button>
+        <button *ngIf="i == 2" (click)="openPhraseModal()">
+          Click here to learn phrases you will commonly use!
+        </button>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
+<app-modal #nounModal></app-modal>
+<app-modal #verbModal></app-modal>
+<app-modal #phraseModal></app-modal>
