changed name to frenchNounModal

--- a/src/app/french/french.component.html
+++ b/src/app/french/french.component.html
@@ -19,6 +19,4 @@
   </div>
 </div>
 
-<app-modal #nounModal></app-modal>
-<app-modal #verbModal></app-modal>
-<app-modal #phraseModal></app-modal>
+<app-modal #frenchNounModal></app-modal>
