changed names of the app-modal imports

--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -19,6 +19,6 @@
   </div>
 </div>
 
-<app-modal #nounModal></app-modal>
-<app-modal #verbModal></app-modal>
-<app-modal #phraseModal></app-modal>
+<app-modal #urduNounModal></app-modal>
+<app-modal #urduVerbModal></app-modal>
+<app-modal #urduPhraseModal></app-modal>
