added app modal with frenchVerbModal

--- a/src/app/french/french.component.html
+++ b/src/app/french/french.component.html
@@ -20,4 +20,5 @@
 </div>
 
 <app-modal #frenchNounModal></app-modal>
+<app-modal #frenchVerbModal></app-modal>
 <app-modal #frenchPhraseModal></app-modal>
