--- a/src/app/shared/modal/modal.component.css
+++ b/src/app/shared/modal/modal.component.css
@@ -1,12 +1,11 @@
 .container {
   display: none;
   position: absolute;
-  z-index: 1;
-  padding-top: 100px;
+  padding-top: 6%;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 89%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
