--- a/src/app/urdu/urdu.component.css
+++ b/src/app/urdu/urdu.component.css
@@ -3,12 +3,20 @@
   justify-content: center;
   align-items: center;
   height: 100px;
-  max-width: 30%;
+  max-width: 40%;
+  margin-left: 5%;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
 }
 
 .row {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
 mat-card {
@@ -17,4 +25,5 @@ mat-card {
   flex-direction: column;
   align-items: center;
   background-color: rgb(156, 247, 156);
+  width: 400px;
 }
