used ngClass to dynamically set the class

--- a/src/app/language-card/language-card.component.html
+++ b/src/app/language-card/language-card.component.html
@@ -4,7 +4,7 @@
     <div *ngFor="let languageCard of languageCards; let i = index">
       <div>
         <mat-card
-          class="mat-card"
+          [ngClass]="languageCard.available ? 'mat-card-green' : 'mat-card-red'"
           routerLink="{{ languageCard.language }}"
           (click)="selectClicked(i)"
         >
