--- a/src/app/language-card/language-card.component.css
+++ b/src/app/language-card/language-card.component.css
@@ -35,6 +35,7 @@
 
 .mat-card:hover {
   box-shadow: 0 5px 35px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .mat-card:hover::before,
@@ -47,8 +48,13 @@
   z-index: -1;
 }
 
-.mat-card:hover:after {
+.mat-card-green:hover:after {
   background: green;
+  animation: 2s counterclockwise infinite;
+}
+
+.mat-card-red:hover:after {
+  background: red;
   animation: 2s counterclockwise infinite;
 }
 
