changed openNounModal to openTest method, added html for the test modal

--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -5,7 +5,7 @@
       <mat-card>
         <mat-card-title>{{ category.category }}</mat-card-title>
         <mat-card-content>{{ category.description }}</mat-card-content>
-        <button *ngIf="i == 0" (click)="openNounModal()">
+        <button *ngIf="i == 0" (click)="openTest()">
           Click here to learn some Animal names!
         </button>
         <button *ngIf="i == 1" (click)="openVerbModal()">
@@ -22,3 +22,15 @@
 <app-modal #urduNounModal></app-modal>
 <app-modal #urduVerbModal></app-modal>
 <app-modal #urduPhraseModal></app-modal>
+
+<div #testing class="container">
+  <div class="content" *ngFor="let test of tests; let i = index">
+    <div *ngIf="test.language == 'Urdu' && test.type == 'Noun'">
+      <p class="word">Word: {{ test.word }}</p>
+      <p class="translation">Translation: {{ test.translation }}</p>
+    </div>
+  </div>
+  <div class="button-container">
+    <button (click)="close()">Close</button>
+  </div>
+</div>
