--- a/src/app/urdu/urdu.component.css
+++ b/src/app/urdu/urdu.component.css
@@ -27,3 +27,29 @@ mat-card {
   background-color: rgb(156, 247, 156);
   width: 380px;
 }
+
+.container {
+  display: none;
+  position: absolute;
+  padding-top: 6%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 89%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0px;
+}
