--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,7 +1,9 @@
 <div #urduNounModal class="container">
-  <div class="content" *ngFor="let urduNoun of urduNouns">
-    <p class="word">Word: {{ urduNoun.word }}</p>
-    <p class="translation">Translation: {{ urduNoun.translation }}</p>
+  <div class="content" *ngFor="let word of myVariable; let i = index">
+    <div *ngIf="word.language == 'Urdu' && word.type == 'Noun'">
+      <p class="word">Word: {{ word.word }}</p>
+      <p class="translation">Translation: {{ word.translation }}</p>
+    </div>
   </div>
   <div class="button-container">
     <button (click)="close()">Close</button>
@@ -52,18 +54,6 @@
   <div class="content" *ngFor="let frenchPhrase of frenchPhrases">
     <p class="word">Word: {{ frenchPhrase.word }}</p>
     <p class="translation">Translation: {{ frenchPhrase.translation }}</p>
-  </div>
-  <div class="button-container">
-    <button (click)="close()">Close</button>
-  </div>
-</div>
-
-<div #testing2 class="container">
-  <div class="content" *ngFor="let test of tests; let i = index">
-    <div *ngIf="test.language == 'Urdu' && test.type == 'Noun'">
-      <p class="word">Word: {{ test.word }}</p>
-      <p class="translation">Translation: {{ test.translation }}</p>
-    </div>
   </div>
   <div class="button-container">
     <button (click)="close()">Close</button>
