--- a/src/app/language-card/language-card.component.css
+++ b/src/app/language-card/language-card.component.css
@@ -16,8 +16,8 @@
   display: flex;
   height: 60vh;
   flex-wrap: wrap;
-  justify-content: space-between;
-  width: 50%;
+  justify-content: center;
+  width: 70%;
 }
 
 .mat-card {
@@ -32,6 +32,7 @@
   border-radius: 75px;
   padding: 0px !important;
   outline: none !important;
+  margin: 30px;
 }
 
 .mat-card:hover {
