--- a/src/app/urdu/urdu.component.html
+++ b/src/app/urdu/urdu.component.html
@@ -2,18 +2,30 @@
 <div class="card-container">
   <div class="row">
     <div *ngFor="let category of categories; let i = index">
-      <mat-card *ngIf="i == 0" (click)="openNounModal()">
-        <mat-card-title>{{ category.category }}</mat-card-title>
-        <mat-card-content>{{ category.description }}</mat-card-content>
-      </mat-card>
-      <mat-card *ngIf="i == 1" (click)="openVerbModal()">
-        <mat-card-title>{{ category.category }}</mat-card-title>
-        <mat-card-content>{{ category.description }}</mat-card-content>
-      </mat-card>
-      <mat-card *ngIf="i == 2" (click)="openPhraseModal()">
-        <mat-card-title>{{ category.category }}</mat-card-title>
-        <mat-card-content>{{ category.description }}</mat-card-content>
-      </mat-card>
+      <div class="mat-card" *ngIf="i == 0" (click)="openNounModal()">
+        <div class="card-image">
+          <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+        </div>
+        <div class="card-title">
+          <p>{{ category.category }}</p>
+        </div>
+      </div>
+      <div class="mat-card" *ngIf="i == 1" (click)="openVerbModal()">
+        <div class="card-image">
+          <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+        </div>
+        <div class="card-title">
+          <p>{{ category.category }}</p>
+        </div>
+      </div>
+      <div class="mat-card" *ngIf="i == 2" (click)="openPhraseModal()">
+        <div class="card-image">
+          <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+        </div>
+        <div class="card-title">
+          <p>{{ category.category }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
