--- a/src/app/language-card/language-card.component.html
+++ b/src/app/language-card/language-card.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">Pick a Language</h1>
+<h1 class="title">Which language will you go for?</h1>
 <div class="container">
   <div class="card-container">
     <div *ngFor="let languageCard of languageCards; let i = index">
