--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -29,7 +29,7 @@
 .button-container {
   display: flex;
   justify-content: center;
-  padding: 20px 0px;
+  margin: 10px 0px 30px 0px;
 }
 
 // base
